# cs421-2

mp1/mp1a-recursion/src/: Lib.hs
mp1/mp1b-adts/src/: Lib.hs
mp2/: README.md
mp2/.stack-work/ghci/ca9220e2/: cabal_macros.h
mp2/.stack-work/ghci/f37c6e72/: cabal_macros.h
mp2/.stack-work/install/x86_64-osx/lts-13.2/8.6.3/flag-cache/: HUnit-1.6.0.0-C6N9GX1vz2Z4nPL5JbE3ac  async-2.2.1-4fWSSJ8SFccIxQJVItkRnX  call-stack-0.1.0-J1eWgTNOnM4IGVyeW0v2YZ  clock-0.7.2-6GYCAXixqb8FuS0ooeoDbD  hashable-1.2.7.0-CWI8VZuQTAYWIQTQQtqCV  optparse-applicative-0.14.3.0-9Xv6shpugfI3cfy5jl0hyl  quickcheck-io-0.2.0-3ycEyt8oHNvFUvW1rQQ2JM  tagged-0.8.6-CAGIOj1cv5J42b7wUKOeE3  tasty-1.2-BWzRXCpoGA4CZAB0fU9DWL  tasty-hunit-0.10.0.1-IVVGf2JEt2h8Xhb32Vy4uu  tasty-quickcheck-0.10-EiNdY2ZO4bXGIIrRFPODM8  transformers-compat-0.6.2-2aGr2H01tr03oYIwD5LYXX  unbounded-delays-0.1.1.0-7ulHERuvlgAKyhaTH4vNZc  unordered-containers-0.2.9.0-BRWkoSTuML1cQdpep6Oin  wcwidth-0.0.2-HlBWSHd0u0t4BLF0paIjbe
mp2/.stack-work/install/x86_64-osx/lts-13.2/8.6.3/pkgdb/: interpreter-0.3.0.0-4gVNHqUzH3R1FXJezvx9Dq.conf  package.cache
mp2/src/: Lib.hs
mp2/test/: StmtGens.hs
mp3/: mp3-cps.cabal
mp3/.stack-work/ghci/869f8dc6/: cabal_macros.h
mp3/.stack-work/ghci/e8f47dc9/: cabal_macros.h
mp3/.stack-work/install/x86_64-osx/lts-13.10/8.6.3/flag-cache/: mp3-cps-0.1.0.0
mp3/src/: Lib.hs
mp3/test/: Tests.hs
mp4/.stack-work/ghci/501bd980/: cabal_macros.h
mp4/src/: Lib.hs
mp5/.stack-work/ghci/14c2620a/: cabal_macros.h
mp5/app/: Main.hs
mp5/app/Scheme/: Eval.hs  Runtime.hs
mp6/.stack-work/ghci/ec5fb294/: cabal_macros.h
mp6/src/: Infer.hs
(+30 files in other folders)
