name:                mp3-cps
version:             0.1.0.0
synopsis:            Write a CPS Transform
license:             NCSA
build-type:          Simple
cabal-version:       >=1.10

executable main
    hs-source-dirs:     app, src
    other-modules:      Lib, Parse
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base , unordered-containers >= 0.2 , parsec
    default-language:   Haskell2010

test-suite test
    type:               exitcode-stdio-1.0
    other-modules:      Lib , Parse
    hs-source-dirs:     src , test
    main-is:            Tests.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base , unordered-containers >= 0.2 , parsec
    build-depends:      base 
                      , unordered-containers >= 0.2 
                      , parsec
                      , test-framework
                      , test-framework-quickcheck2
                      , QuickCheck


-- t-suite test
--     type:               exitcode-stdio-1.0
--     hs-source-dirs:     test
--     main-is:            Tests.hs
--     ghc-options:        -threaded -rtsopts -with-rtsopts=-N
--     build-depends:      base
--                       , mp3-cps
--                       , unordered-containers >= 0.2
--                       , QuickCheck
--                       , test-framework
--                       , test-framework-quickcheck2
--                       , parsec
--     default-language:   Haskell2010
-- 
